[package]
name = "ganymede"
version = "2.0.0"
authors = ["David Bourgault <contact@davidbourgault.ca>"]
edition = "2021"
default-run = "ganymede"

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.5"
chrono = "0.4.26"
chrono-tz = "0.8.2"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
log = "0.4.19"
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.8.4"
serde = "1.0.164"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
time = "0.3.26"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.8"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
uuid = { version = "1.3.4", features = ["v4", "macro-diagnostics"] }

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "ganymede"
path = "src/main.rs"

[[bin]]
name = "b64uuid"
path = "src/tools/b64uuid.rs"
